Correct missing border-top on mobile.

--- a/styleguide/source/assets/scss/03-organisms/_footer.scss
+++ b/styleguide/source/assets/scss/03-organisms/_footer.scss
@@ -115,8 +115,11 @@
   &__menu-products {
     @include font-size($footer-font-sizes--menu);
     @include gutter($padding-bottom-half...);
+    margin-top: $gutter-mobile;
+    padding-top: $gutter-mobile;
     text-transform: uppercase;
     text-align: center;
+    border-top: 1px solid $gray-50;
 
     li {
       display: inline-block;
@@ -211,7 +214,6 @@
       @include gutter($margin-top-half...);
       order: 4;
       flex: 1 100%;
-      border-top: 1px solid $gray-50;
     }
 
     &__mission {
